--- a/.github/workflows/build-pro-config.yml
+++ b/.github/workflows/build-pro-config.yml
@@ -81,7 +81,10 @@ jobs:
     # Execute all unit tests in the solution
     #- name: Execute unit tests
     #  run: dotnet test
-
+    - name: Where are we
+      run: |
+        echo dir
+        
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
       run: msbuild Configuration/ConfigWithStartWizard.sln /t:Restore /p:Configuration=Release
