--- a/.github/workflows/build-pro-config.yml
+++ b/.github/workflows/build-pro-config.yml
@@ -86,11 +86,11 @@ jobs:
         
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
-      run: msbuild Configuration/ConfigWithStartWizard.sln /t:Restore /p:Configuration=Release
+      run: msbuild Configuration\ConfigWithStartWizard\ConfigWithStartWizard.sln /t:Restore /p:Configuration=Release
 
     # Build the application to populate the obj folder with RuntimeIdentifiers
     - name: Build the application
-      run: msbuild Configuration/ConfigWithStartWizard.sln /t:Build /p:Configuration=Release
+      run: msbuild Configuration\ConfigWithStartWizard\ConfigWithStartWizard.sln /t:Build /p:Configuration=Release
 
 
     # Upload the config package: https://github.com/marketplace/actions/upload-a-build-artifact
@@ -98,4 +98,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: MSIX Package
-        path: Configuration/ConfigWithStartWizard/bin/Release/net8.0-windows/*.proConfigX
+        path: Configuration\ConfigWithStartWizard\bin\Release\net8.0-windows\*.proConfigX
